--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import '~react-image-gallery/styles/css/image-gallery.css';
 
 .custom-fade {
   transition-property: color, background-color, border-color,
